Fullscreen sprite editor on tablet tutorial, CSS fixes

--- a/theme/common.less
+++ b/theme/common.less
@@ -1056,6 +1056,7 @@ p.ui.font.small {
         max-width: 100%;
         min-width: 100%;
         height:100% !important;
+        background-color: @simulatorBackground;
     }
     #miniSimOverlay {
         display: none;
